--- a/homeworks/maksym.selenkov_MaksymSelenkov/5-rxjs/style.css
+++ b/homeworks/maksym.selenkov_MaksymSelenkov/5-rxjs/style.css
@@ -66,6 +66,7 @@ body {
   flex-direction: column;
   align-items: flex-start;
   font-size: 28px;
+  padding-top: 20px;
 }
 
 .header__nav--burger-click {
