add logic for active tabs by click

--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/5-rxjs/style.css
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/5-rxjs/style.css
@@ -44,6 +44,11 @@ body {
   line-height: 35px;
 }
 
+.top-nav__link_active {
+  background-color: #FFF;
+  color: #3FAB67;
+}
+
 .top-nav__link:hover {
   color: #333;
   background-color: #FFF;
