fix nav menu position bugs

--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/5-rxjs/style.css
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/5-rxjs/style.css
@@ -123,6 +123,7 @@ body {
   .top-nav {
     position: relative;
     top: 0;
+    left: auto;
     flex-wrap: nowrap;
     flex-direction: row;
     width: auto;
