--- a/homeworks/oleksandr.prylutskiy_SanSandru4/5-rxjs/style.css
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/5-rxjs/style.css
@@ -49,8 +49,10 @@ body {
   font-size: 20px;
 }
 
-.header__menu-list {
+.header__menu {
   list-style-type: none;
+  display: flex;
+  flex-direction: row;
 }
 
 .header__nav-link {
@@ -82,15 +84,52 @@ body {
 }
 
 @media screen and (max-width: 520px) {
-  .header__nav .header__nav-link { display: none; background-color: #000;}
-  .header__nav a.icon { display: block; }
-  .section, .header { width: 100%; }
-  .header__nav-link:hover { color: #FFF; }
-  .header--hidden { transform: translateY(-160px); }
-  .header__nav { align-items: unset; background-color: #20AD70; }
-  .header__menu.responsive { position: absolute; left: 0; margin-top: 40px; width: 100%; display: flex; flex-direction: column; z-index: 2; }
-  .header__menu.responsive .icon { position: absolute; right: 0; top: -40px; }
-  .header__menu.responsive .header__nav-link { display: block; text-align: left;}
+
+  .header__nav .header__nav-link {
+    display: none; background-color: #000;
+  }
+
+  .header__nav a.icon {
+    display: block;
+  }
+
+  .section, .header {
+    width: 100%;
+  }
+
+  .header__nav-link:hover {
+    color: #FFF;
+  }
+
+  .header--hidden {
+    transform: translateY(-160px);
+  }
+
+  .header__nav {
+    align-items: unset;
+    background-color: #20AD70;
+  }
+
+  .header__menu--opened {
+    position: absolute;
+    left: 0;
+    margin-top: 40px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    z-index: 2;
+  }
+
+  .header__menu--opened .icon {
+    position: absolute;
+    right: 0;
+    top: -40px;
+  }
+
+  .header__menu--opened .header__nav-link {
+    display: block;
+    text-align: left;
+  }
 }
 
 .main {
