--- a/homeworks/Andrii.Morozov_AndriiMorozov88/5-rxjs/style_rxjs.css
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/5-rxjs/style_rxjs.css
@@ -63,7 +63,7 @@ a {
 @media (max-width: 767px) {
 
   .header__burger {
-    display: none;
+    display: block;
     width: 30px;
     height: 30px;
     cursor: pointer;
@@ -74,5 +74,22 @@ a {
     height: 2px;
     border: 1px #FFF solid;
     margin-bottom: 3px;
+  }
+
+  .header__content {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 20%;
+  }
+
+  .header__content-menu-ul-active {
+    display: block;
+    font-size: 20px;
+  }
+
+  .header__content-menu-ul-hidden {
+    display: none;
   }
 }
