--- a/homeworks/Aleksandr.Turuta_turuta7/5-rxjs/style.css
+++ b/homeworks/Aleksandr.Turuta_turuta7/5-rxjs/style.css
@@ -100,20 +100,20 @@
   transition: .4s  cubic-bezier(.68, -.6, .32, 1.6);
 }
 
-span:nth-of-type(1) {
+.nav__label-chech-span_one {
   width: 50%;
 }
 
-span:nth-of-type(2) {
+.nav__label-chech-span_two {
   width: 100%;
 }
 
-span:nth-of-type(3) {
+.nav__label-chech-span_three:nth-of-type(3) {
   width: 75%;
 }
 
 
-.nav__label-chech-input[type="checkbox"] {
+.nav__label-chech-input {
   display: none;
 }
 
@@ -133,7 +133,16 @@ span:nth-of-type(3) {
   transform: translate(30px,-11px) rotateZ(45deg);
 }
 
-@media (max-width: 700px) {
+@media (max-width: 650px) {
+
+  .nav__list-item {
+    margin-right: 10px;
+    font-size: 20px;
+  }
+}
+
+
+@media (max-device-width: 420px) {
 
   .header {
     flex-direction: column;
@@ -174,5 +183,10 @@ span:nth-of-type(3) {
     top: 20px;
     right: 60px;
     z-index: 9999;
+  }
+
+  .nav__list-item {
+    margin-right: 10px;
+    font-size: 30px;
   }
 }
