--- a/homeworks/Aleksandr.Turuta_turuta7/5-rxjs/style.css
+++ b/homeworks/Aleksandr.Turuta_turuta7/5-rxjs/style.css
@@ -64,14 +64,15 @@
   transform: scale(1.1)
 }
 
-.absolute {
-  position: absolute;
+.sticky {
+  position: sticky;
 }
 
 .hidden {
   opacity: 0;
   transition: .3s;
   visibility: hidden;
+  position: sticky;
 }
 
 .visible {
@@ -92,7 +93,7 @@
   cursor: pointer;
 }
 
-.nav__label-chech  span {
+.nav__label-chech .nav__label-chech-span {
   background: #FFF;
   border-radius: 10px;
   height: 7px;
@@ -108,29 +109,34 @@
   width: 100%;
 }
 
-.nav__label-chech-span_three:nth-of-type(3) {
+.nav__label-chech-span_three {
   width: 75%;
 }
-
 
 .nav__label-chech-input {
   display: none;
 }
 
-.nav__label-chech-input[type="checkbox"]:checked ~ span:nth-of-type(1) {
+.nav__label-chech-input[type="checkbox"]:checked ~ .nav__label-chech-span_one {
   transform-origin: bottom;
   transform: rotateZ(45deg) translate(8px,0)
 }
 
-.nav__label-chech-input[type="checkbox"]:checked ~ span:nth-of-type(2) {
+.nav__label-chech-input[type="checkbox"]:checked ~ .nav__label-chech-span_two {
   transform-origin: top;
   transform: rotateZ(-45deg)
 }
 
-.nav__label-chech-input[type="checkbox"]:checked ~ span:nth-of-type(3) {
+.nav__label-chech-input[type="checkbox"]:checked ~ .nav__label-chech-span_three {
   transform-origin: bottom;
   width: 50%;
   transform: translate(30px,-11px) rotateZ(45deg);
+}
+
+.main__button {
+  width: 100%;
+  height: 120px;
+  font-size: 40px;
 }
 
 @media (max-width: 650px) {
